Filtering out my input files

--- a/.gitignore
+++ b/.gitignore
@@ -128,3 +128,4 @@ ozzmeister00/AdventOfCode2020/Binaries/Win64/UE4Editor-AdventOfCode2020.dll
 ozzmeister00/AdventOfCode2020/Binaries/Win64/UE4Editor-AdventOfCode2020.pdb
 ozzmeister00/AdventOfCode2020/Binaries/Win64/UE4Editor.modules
 tEvashk/*.txt
+*.input
