No more txt files for anyone.

--- a/.gitignore
+++ b/.gitignore
@@ -131,3 +131,4 @@ ozzmeister00/AdventOfCode2020/.vs/AdventOfCode2020/v16/ipch/AutoPCH/db277142ba3d
 tEvashk/*.txt
 *.input
 oscar_domingo/*.txt
+*.txt
